added template pages and forms for adding to trains to user route

--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
+  <head>
     <title>High Speed Rail Ticketing</title>
-</head>
+  </head>
 
-<body>
-<h1>Welcome to...</h1>
-
-<a th:href="@{/map}" id="design">Generate your route</a>
-</body>
+  <body>
+    <img width="800px" th:src="@{/images/map.gif}"/>
+  </body>
 </html>
