--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <img width="800px" th:src="@{/images/map.gif}"/>
-    <h1 th:text="${tickets.get(0).getPassengerName()}"></h1>
+  <h1>Please select one train per route.</h1>
+  <a th:href="@{/map}">Return to Route Generation</a>
   </body>
 </html>
